--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a
-                    href="https://twitter.com/mdo">@mdo</a>.</p>
+            <p>Copyright Plant 2019 - All rights reserved</p>
         </div>
     </footer>
 </div>
