--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </header>
 
     <main role="main" class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the
-            text, and add your own fullscreen background photo to make it your own.</p>
+        <h1 class="cover-heading">Planit</h1>
+        <p class="lead">The app that plans all your school and work related activities....<br>Gives insight in your progress and helps you achieve your goals....</p>
+        <p class="lead">Now for a one time purchase of only €399,99</p>
         <p class="lead">
             <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
