--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     </header>
 
     <main role="main" class="inner cover">
-        <h1 class="cover-heading">Planit</h1>
-        <p class="lead">The app that plans all your school and work related activities....<br>Gives insight in your progress and helps you achieve your goals....</p>
-        <p class="lead">Now for a one time purchase of only €399,99</p>
+        <h1 class="cover-heading">Plan-It</h1>
+        <p class="lead">The app that plans all your school and work related activities<br>Gives insight in your progress and helps you achieve your goals</p>
         <p class="lead">
             <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
