Ganalytics, some fixes, clickthrough page

--- a/oops.html
+++ b/oops.html
@@ -8,14 +8,24 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135698090-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-135698090-1');
+    </script>
 </head>
-<body class="text-center index">
+<body class="text-center oops">
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
         <div class="inner">
             <h3 class="masthead-brand">Plan-IT</h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
                 <a class="nav-link" href="#">Features</a>
                 <a class="nav-link" href="#">Contact</a>
             </nav>
@@ -23,10 +33,10 @@
     </header>
 
     <main role="main" class="inner cover">
-        <h1 class="cover-heading">Plan-IT</h1>
-        <p class="lead">The app that plans all your school and work related activities.<br>Gives insight in your progress and helps you achieve your goals.</p>
+        <h1 class="cover-heading">Oops!</h1>
+        <p class="lead">You are a bit too soon!<br> Please come back later when development has finished.</p>
         <p class="lead">
-            <a href="oops.html" class="btn btn-lg btn-secondary">Learn more</a>
+            <a href="index.html" class="btn btn-lg btn-secondary">Return</a>
         </p>
     </main>
 
