--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     <main role="main" class="inner cover">
         <h1 class="cover-heading">Plan-IT</h1>
-        <p class="lead">The app that plans all your school and work related activities.<br>Gives insight in your progress and helps you achieve your goals.</p>
+        <p class="lead">The app that plans all your school and work related activities.<br>Gives insight in your progress and helps you achieve your goals.<br>Try now for free!</p>
         <p class="lead">
-            <a href="oops.html" class="btn btn-lg btn-secondary">Learn more</a>
+            <a href="oops" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
     </main>
 
