--- a/oops.html
+++ b/oops.html
@@ -36,7 +36,7 @@
         <h1 class="cover-heading">Oops!</h1>
         <p class="lead">You are a bit too soon!<br> Please come back later when development has finished.</p>
         <p class="lead">
-            <a href="index.html" class="btn btn-lg btn-secondary">Return</a>
+            <a href="/" class="btn btn-lg btn-secondary">Return</a>
         </p>
     </main>
 
