--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="inner">
             <h3 class="masthead-brand">Plan-IT</h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link active" href="/">Home</a>
                 <a class="nav-link" href="#">Features</a>
                 <a class="nav-link" href="#">Contact</a>
             </nav>
@@ -36,7 +36,7 @@
         <h1 class="cover-heading">Plan-IT</h1>
         <p class="lead">The app that plans all your school and work related activities.<br>Gives insight in your progress and helps you achieve your goals.<br>Try now for free!</p>
         <p class="lead">
-            <a href="oops" class="btn btn-lg btn-secondary">Learn more</a>
+            <a href="/Plant/oops" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
     </main>
 
