--- a/oops.html
+++ b/oops.html
@@ -25,7 +25,7 @@
         <div class="inner">
             <h3 class="masthead-brand">Plan-IT</h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="/Plant">Home</a>
                 <a class="nav-link" href="#">Features</a>
                 <a class="nav-link" href="#">Contact</a>
             </nav>
@@ -36,7 +36,7 @@
         <h1 class="cover-heading">Oops!</h1>
         <p class="lead">You are a bit too soon!<br> Please come back later when development has finished.</p>
         <p class="lead">
-            <a href="/" class="btn btn-lg btn-secondary">Return</a>
+            <a href="/Plant" class="btn btn-lg btn-secondary">Return</a>
         </p>
     </main>
 
